--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~9.1.11",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
+    "ngx-spinner": "^11.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
